example/lib/src/arbs/errors/app_sw.arb
{
  "@@locale": "sw",
  "@@author": "example@gmail.com",
  "@@last_modified": "2026-07-14T13:18:25.440497Z",
  "@@comment": "Generated from Google Sheets",
  "error": "Hitilafu imetokea",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "Hitilafu isiyotarajiwa imetokea",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "Ripoti ya hitilafu imetumwa kwa mafanikio.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}